--- a/css/styles.scss
+++ b/css/styles.scss
@@ -6,7 +6,7 @@ body {
   padding-top: 3rem;
   padding-bottom: 3rem;
   color: #5a5a5a;
-  background-image: url('images/blue-snow.png');
+  background-image: url("../images/blue-snow.png");
   background-repeat: repeat;
   background-attachment: fixed;
 }
